--- a/recipes/en-us/HoneyGarlicSlowCookerChickenThighs.html
+++ b/recipes/en-us/HoneyGarlicSlowCookerChickenThighs.html
@@ -11,7 +11,7 @@
     <meta property="url" content="https://valeriiaholovatiuk.github.io/odin-recipes/recipes/HoneyGarlicSlowCookerChickenThighs.html">
     <meta property="imageURL" content="https://valeriiaholovatiuk.github.io/odin-recipes/images/1411947-honey-garlic-slow-cooker-chicken-thighs-Sherri-4x3.webp">
     <meta property="type" content="recipe">
-    <meta property="summury" content="These crock pot chicken thighs are easy to prep with pantry staples. Always a hit with adults and kids! Serve with basmati rice or quinoa and steamed or roasted vegetables.">
+    <meta property="summary" content="These crock pot chicken thighs are easy to prep with pantry staples. Always a hit with adults and kids! Serve with basmati rice or quinoa and steamed or roasted vegetables.">
     
     <title>Honey Garlic Slow Cooked Chicken Thighs</title>
 </head>
