--- a/recipes/en-us/bananaPuddingPie.html
+++ b/recipes/en-us/bananaPuddingPie.html
@@ -9,6 +9,7 @@
     <meta property="url" content="https://valeriiaholovatiuk.github.io/odin-recipes/recipes/bananaPuddingPie.html">
     <meta property="imageURL" content="https://valeriiaholovatiuk.github.io/odin-recipes/images/5799142_Homemade-Banana-Pudding-Pie-4x3-95fc7d451f854f1586be855a0c565e6b.webp">
     <meta property="type" content="recipe">
+    <meta property="summary" content="I can't stand those instant banana puddings. This recipe is old and authentic!">
     
     <title>Banana Pudding Pie</title>
 </head>
