Summary meta tag added to Lasagna recipe (en_us locale)

--- a/recipes/en-us/worldsBestLasagna.html
+++ b/recipes/en-us/worldsBestLasagna.html
@@ -9,6 +9,7 @@
     <meta property="topics" content="Lasagna">
     <meta property="topics" content="world's best">
     <meta property="type" content="recipe">
+    <meta property="summary" content="This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!">
     
     <title>World's Best Lasagna</title>
 </head>
