Summary meta tag added to Lasagna recipe (uk_ua locale)

--- a/recipes/uk-ua/worldsBestLasagna.html
+++ b/recipes/uk-ua/worldsBestLasagna.html
@@ -9,6 +9,7 @@
     <meta property="topics" content="Lasagna">
     <meta property="topics" content="world's best">
     <meta property="type" content="recipe">
+    <meta property="summary" content="Цей рецепт лазаньї вимагає трохи зусиль, але він настільки ситний і поживний, що воно того варте!">
     
     <title>Найкраща лазанья у світі</title>
 </head>
