Fixed Pudding URLs en locale

--- a/recipes/en-us/bananaPuddingPie.html
+++ b/recipes/en-us/bananaPuddingPie.html
@@ -6,8 +6,8 @@
     <meta property="title" content="Banana Pudding Pie">
     <meta property="topics" content="banana pudding">
     <meta property="topics" content="pudding pie">
-    <meta property="url" content="https://valeriiaholovatiuk.github.io/odin-recipes/recipes/bananaPuddingPie.html">
-    <meta property="imageURL" content="https://valeriiaholovatiuk.github.io/odin-recipes/images/5799142_Homemade-Banana-Pudding-Pie-4x3-95fc7d451f854f1586be855a0c565e6b.webp">
+    <meta property="url" content="https://valhstack.github.io/odin-recipes/recipes/en-us/bananaPuddingPie.html">
+    <meta property="imageURL" content="https://valhstack.github.io/odin-recipes/images/5799142_Homemade-Banana-Pudding-Pie-4x3-95fc7d451f854f1586be855a0c565e6b.webp">
     <meta property="type" content="recipe">
     <meta property="summary" content="I can't stand those instant banana puddings. This recipe is old and authentic!">
     
