--- a/recipes/uk-ua/HoneyGarlicSlowCookerChickenThighs.html
+++ b/recipes/uk-ua/HoneyGarlicSlowCookerChickenThighs.html
@@ -8,8 +8,8 @@
     <meta property="topics" content="Slow cooked">
     <meta property="topics" content="garlic">
     <meta property="topics" content="honey">
-    <meta property="url" content="https://valeriiaholovatiuk.github.io/odin-recipes/recipes/HoneyGarlicSlowCookerChickenThighs.html">
-    <meta property="imageURL" content="https://valeriiaholovatiuk.github.io/odin-recipes/images/1411947-honey-garlic-slow-cooker-chicken-thighs-Sherri-4x3.webp">
+    <meta property="url" content="https://valhstack.github.io/odin-recipes/recipes/uk-ua/HoneyGarlicSlowCookerChickenThighs.html">
+    <meta property="imageURL" content="https://valhstack.github.io/odin-recipes/images/1411947-honey-garlic-slow-cooker-chicken-thighs-Sherri-4x3.webp">
     <meta property="type" content="recipe">
     <meta property="summary" content="Ці курячі стегна, приготовані в мультиварці, легко приготувати з використанням основних продуктів. Завжди користуються популярністю у дорослих і дітей! Подавайте з рисом басматі або кіноа та паровими або смаженими овочами.">
     
