Fixed Lasagna URLs uk locale

--- a/recipes/uk-ua/worldsBestLasagna.html
+++ b/recipes/uk-ua/worldsBestLasagna.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="title" content="World's Best Lasagna">
-    <meta property="url" content="https://valeriiaholovatiuk.github.io/odin-recipes/recipes/worldsBestLasagna.html">
-    <meta property="imageURL" content="https://valeriiaholovatiuk.github.io/odin-recipes/images/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.webp">
+    <meta property="url" content="https://valhstack.github.io/odin-recipes/recipes/uk-ua/worldsBestLasagna.html">
+    <meta property="imageURL" content="https://valhstack.github.io/odin-recipes/images/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.webp">
     <meta property="topics" content="Lasagna">
     <meta property="topics" content="world's best">
     <meta property="type" content="recipe">
